jumping fixed

--- a/src/panels/main/Profile/Profile.module.css
+++ b/src/panels/main/Profile/Profile.module.css
@@ -7,7 +7,7 @@
     background-color: #FFFFFF;
     border-radius: 25px;
     grid-template-columns: 5vw 1fr;
-    grid-template-rows: minmax(100px, 150px) minmax(320px, 340px) min-content;
+    grid-template-rows: minmax(100px, 150px) minmax(320px, 340px) 110px;
     grid-template-areas: "slider about" "slider level_fragment" "slider logo";
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     font-family: "Roboto", sans-serif;
@@ -67,6 +67,8 @@
 }
 
 .logo > img {
+    height: 75px;
+    width: 75px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
